--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,30 @@
 .container{
-  border-style: solid;
-  border-color: black;
+/*  border-style: solid;
+  border-color: black;*/
   height: 100vh;
 }
-.col-2{
+/*.col-2{
   border-style: solid;
   border-color: black;
 }
 .col-10{
   border-style: solid;
   border-color: black;
-
-}
+}*/
 .wrap{
   text-align: center;
 }
 .logo{
   margin-top: 2%;
+  width:50%;
+  height: 50%;
 }
 .sidebar{
   text-align: left;
+  list-style-type: none;
+  font-size: .75em;
+  margin-top:10%;
+  background-color: rgba(245,245,245,125);
 }
 
 #mainR{
@@ -37,28 +42,35 @@
 
 #top{
   width:100%;
-  height:15%;
+  height:10%;
   background-color: rgba(245,245,245,125);
+  padding: 1%;
 }
 .card{
   margin-top:3%;
 }
 #content_row{
-height:50%;
+  height:50%;
 }
 .panel_wrap{
-  height:50%;
+  height:46%;
 }
 .panel_wrap_l{
-  height:50%;
+  height:46%;
 }
-#top_l{
+.top_l{
   height:100%;
 }
-#bleh .card-body{
+.body-green{
   background-color: rgba(240, 255, 240, 80);
 }
 
-#blah .card-body{
+.body-blue{
   background-color: rgba(240, 248, 255, 80);
+}
+.body-red {
+  background-color: rgba(255, 228, 225, 80);
+}
+.card-title {
+  padding: 1%;
 }
